--- a/src/components/movie-card/movie-card.html
+++ b/src/components/movie-card/movie-card.html
@@ -1,4 +1,31 @@
-<!-- Generated template for the MovieCardComponent component -->
-<div>
-  {{text}}
-</div>
+<ion-card>
+  <img src="assets/imgs/jurassicworld.jpg">
+<ion-card-content>
+  <p>Resumo Do Filme</p>
+</ion-card-content>
+<ion-row>
+  <ion-col>
+    <button ion-button icon-start clear small>
+      <ion-icon name="thumbs-up"></ion-icon>
+      <div>12 Likes</div>
+    </button>
+  </ion-col>
+  <ion-col>
+    <button ion-button icon-start clear small>
+      <ion-icon name="text"></ion-icon>
+      <div>4 Comments</div>
+    </button>
+  </ion-col>
+  <ion-col center text-center>
+    <ion-note>
+      11h Ago
+    </ion-note>
+  </ion-col>
+  <ion-col>
+    <button ion-button icon-start clear small>
+      <ion-icon name="logo-apple"></ion-icon>
+      <div>Iphone</div>
+    </button>
+  </ion-col>
+</ion-row>
+</ion-card>
