--- a/src/components/movie-card/movie-card.html
+++ b/src/components/movie-card/movie-card.html
@@ -1,7 +1,7 @@
 <ion-card>
-  <img src="assets/imgs/jurassicworld.jpg">
+  <img src='https://image.tmdb.org/t/p/w500' + movie.poster_path>
 <ion-card-content>
-  <p>Resumo Do Filme</p>
+  <p>{{ movie.overview }}</p>
 </ion-card-content>
 <ion-row>
   <ion-col>
